# pve-pci-assignment-manager

./: .gitignore  CLAUDE.md  LICENSE  README.md  config.example.yaml  pyproject.toml
.github/workflows/: build-deb.yml
debian/: changelog  control  copyright  rules
docs/: admin-guide.en.md
pvepci/: __init__.py  apply.py  cli.py  config.py  guest.py  model.py  pve.py  render.py  safety.py  solver.py
tests/: test_apply.py  test_config.py  test_guest.py  test_pve.py  test_solver.py
